new id for each request, delete files after sending response

--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "mime": "latest",
     "fs-extra": "latest",
-    "formidable": "latest"
+    "formidable": "latest",
+    "shortid": "latest"
   }
 }
